# fastapi-example

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .precommit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
app/: config.py  connection_manager.py  debug.py  main.py
app/internal/: connection_manager.py
app/routers/: sockets.py
app/utils/: logger.py  settings.py
src/fastapi_example/: __init__.py  __main__.py  asgi.py  cli.py  main.py  settings.py  typing.py
src/fastapi_example/core/: __init__.py  models.py  requests.py  responses.py  router.py  routing.py  state.py
src/fastapi_example/instrumentation/: __init__.py  logging.py
src/fastapi_example/instrumentation/prometheus/: __init__.py
src/fastapi_example/redis/: client.py
src/fastapi_example/routes/: router.py
src/fastapi_example/routes/v1/: router.py
src/fastapi_example/routes/v1/methods/: router.py
src/fastapi_example/state/: __init__.py  request.py  state.py
tests/: fixtures.py  test_main.py
